VER-907 [AL] helpline-frontend: (FE) Ensure that the helpline phone numbers don't text wrap over 2 lines

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,7 @@ $hmrc-assets-path: "/helpline/assets/lib/hmrc-frontend/hmrc/";
     margin-bottom: 0;
   }
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
